src/components/RetailerCard/styles.module.css
.card {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 4px;
    width: 138px;
    height: 118px;
    padding: 17.659px 43.211px 19px 42.56px;
    background: var(--retailer-card-bg);
    border-width: var(--retailer-card-border-w);
    border-style: solid;
    border-color: var(--retailer-card-border-color);
    border-radius: 9px;
    cursor: pointer;
    user-select: none;
    transition: .2s;
}

.card:hover {
    border-color: var(--retailer-card--hover-border-color);
}

.card:active {
    border-color: var(--retailer-card--hover-border-color);
}

.logo_container {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-width: var(--retailer-card-img-border-w);
    border-style: solid;
    border-color: var(--retailer-card-img-border-c);
    border-radius: 50%;
}
.fallback_logo_container {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: white;
    border-width: var(--retailer-card-img-border-w);
    border-style: solid;
    border-color: var(--retailer-card-img-border-c);
    border: var(--retailer-logo-fallback-border-w, 1px) solid var(--retailer-logo-fallback-border-c, var(--retailer-card-img-border-c));
    border-radius: 50%;
}

.logo_container_campaign {
    border-color: var(--retailer-card-img-border-campaign-c, var(--retailer-card-img-border-c));
}

.logo {
    object-fit: contain;
    width: 58px;
    height: 58px;
    border-radius: 50%;
}

.fallback_logo {
    display: flex;
    width: 56px;
    height: 56px;
    padding: 4px 3.9px 4px 4.1px;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    border-radius: 50%;
    text-align: center;
    font-style: normal;
    background: var(--retailer-logo-fallback-bg,var(--retailer-card-img-border-c));
    color: var(--retailer-logo-fallback-f-c, white);
    font-size: var(--retailer-logo-fallback-f-s, 24px);
    font-weight: var(--retailer-logo-fallback-f-w, 700);
    text-transform: uppercase;
}
.fallback_logo_two_letters {
    font-size: var(--retailer-logo-fallback-f-s-two-letters, 37px); 
    background: var(--retailer-logo-fallback-bg, linear-gradient(135deg, #667eea 0%, #764ba2 100%));  
}

.retailer_name {
    font-size: var(--retailer-card-name-f-s);
    font-weight: var(--retailer-card-name-f-w);
    color: var(--retailer-card-name-f-c);
    white-space: nowrap;
    line-height: 20.8px;
    margin: 4px 0;
}

.cashback_rate {
    font-size: var(--retailer-card-amount-f-s);
    font-weight: var(--retailer-card-amount-f-w);
    color: var(--retailer-card-amount-f-c);
    background: var(--retailer-card-amount-bg);
    padding: 6px;
    width: 140px;
    border-radius: 50px;
    text-align: center;
    white-space: nowrap;
}

.cashback_rate_campaign {
    background: var(--retailer-card-amount-campaign-bg, var(--retailer-card-amount-bg));
    color: var(--retailer-card-amount-campaign-f-c, var(--retailer-card-amount-f-c));
    font-weight: var(--retailer-card-amount-campaign-f-w, var(--retailer-card-amount-f-w));
}

.flag {
    position: absolute;
    top: 16px;
    right: 0;
    width: 50px;
    height: 12px;
    font-size: var(--retailer-card-flag-f-s);
    font-weight: var(--retailer-card-flag-f-w);
    line-height: 12px;
    vertical-align: middle;
    text-align: center;
    padding: 5px 0;
    color: var(--retailer-card-flag-f-c);
    background: var(--retailer-card-flag-bg);
    border-top-left-radius: var(--retailer-card-flag-radius);
    border-bottom-left-radius: var(--retailer-card-flag-radius);
    text-wrap: nowrap;
}

.flag_campaign {
    background: var(--retailer-card-flag-campaign-bg, var(--retailer-card-flag-bg));
    color: var(--retailer-card-flag-campaign-f-c, var(--retailer-card-flag-f-c));
    font-weight: var(--retailer-card-flag-campaign-f-w, var(--retailer-card-flag-f-w));
}

.skeleton,
.skeleton_logo,
.skeleton_retailer_name,
.skeleton_cashback_rate {
    background: var(--retailer-card-amount-bg);
}

.skeleton_logo {
    width: 62px;
    height: 62px;
    border-radius: 50%;
}

.skeleton_retailer_name {
    width: 55px;
    height: 19px;
    border-radius: 20px;
}

.skeleton_cashback_rate {
    width: 117px;
    height: 25px;
    border-radius: 20px;
}

@media screen and (max-width: 768px) {
    .card {
        width: 152px;
        padding: 17.659px 9.441px 15.522px 8.559px;
    }
}

